# toob-lang

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: first.2b  second.2b
src/: Ayanami.c  Ayanami.cpp  Environment.c  error.c  fileIO.c  lexer.c  parser.c
src/include/: Environment.h  error.h  fileIO.h  lexer.h  parser.h
